|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2014, PHP 5.4.34

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)

- Core:
  . Fixed bug #67985 (Incorrect last used array index copied to new array after
    unset). (Tjerk)
  . Fixed bug #68044 (Integer overflow in unserialize() (32-bits only)). 
    (CVE-2014-3669) (Stas)

- OpenSSL:
  . Reverted fixes for bug #41631, due to regressions. (Stas) 

- XMLRPC:
  . Fixed bug #68027 (Global buffer overflow in mkgmtime() function). 
    (CVE-2014-3668) (Stas)

18 Sep 2014, PHP 5.4.33

- Core:
  . Fixed bug #47358 (glob returns error, should be empty array()). (Pierre)
  . Fixed bug #65463 (SIGSEGV during zend_shutdown()). (Keyur Govande)
  . Fixed bug #66036 (Crash on SIGTERM in apache process). (Keyur Govande)

- OpenSSL:
  . Fixed bug #41631 (socket timeouts not honored in blocking SSL reads).
    (Daniel Lowrey)

- Date:
  . Fixed bug #66091 (memory leaks in DateTime constructor). (Tjerk)

- FPM:
  . Fixed #67606 (FPM with mod_fastcgi/apache2.4 is broken). (David Zuelke)

- GD:
  . Made fontFetch's path parser thread-safe. (Sara)

- Wddx:
  . Fixed bug #67873 (Segfaults in php_wddx_serialize_var). (Anatol, Remi)

- Zlib:
  . Fixed bug #67724 (chained zlib filters silently fail with large amounts of 
    data). (Mike)
  . Fixed bug #67865 (internal corruption phar error). (Mike)

21 Aug 2014, PHP 5.4.32

- COM:
  . Fixed missing type checks in com_event_sink. (Yussuf Khalil, Stas)
  . Fixed bug #41577 (DOTNET is successful once per server run).
    (Aidas Kasparas)

- Fileinfo:
  . Fixed bug #67705 (extensive backtracking in rule regular expression).
    (CVE-2014-3538) (Remi)
  . Fixed bug #67716 (Segfault in cdf.c). (CVE-2014-3587) (Remi)

- GD:
  . Fixed bug #66901 (php-gd 'c_color' NULL pointer dereference).
    (CVE-2014-2497). (Remi)
  . Fixed bug #67730 (Null byte injection possible with imagexxx functions).
    (CVE-2014-5120) (Ryan Mauger)
